tinc-integration-tests/src/snapshots/tinc_integration_tests__optional_fields__json_omittable_required_field_missing.snap
---
source: tinc-integration-tests/src/optional_fields.rs
expression: state
---
TrackerSharedState {
    fail_fast: false,
    errors: [
        TrackedError {
            kind: MissingField,
            fatal: true,
            path: "required_field",
        },
        TrackedError {
            kind: MissingField,
            fatal: true,
            path: "omittable_false",
        },
    ],
}
