tinc-integration-tests/src/snapshots/tinc_integration_tests__optional_fields__json_omittable_serialization.snap
---
source: tinc-integration-tests/src/optional_fields.rs
expression: message
---
{
  "required_field": "required",
  "omittable_false": "",
  "omittable_true_but_serialize": "",
  "optional_default": null
}
