tinc-integration-tests/src/snapshots/tinc_integration_tests__optional_fields__nested_optional_inner_invalid.snap
---
source: tinc-integration-tests/src/optional_fields.rs
expression: state
---
TrackerSharedState {
    fail_fast: false,
    errors: [
        TrackedError {
            kind: InvalidField {
                message: "value must be at least `1` characters long",
            },
            fatal: true,
            path: "inner.name",
        },
        TrackedError {
            kind: MissingField,
            fatal: true,
            path: "items",
        },
        TrackedError {
            kind: MissingField,
            fatal: true,
            path: "map_items",
        },
    ],
}
