tinc-integration-tests/src/snapshots/tinc_integration_tests__optional_fields__nested_optional_map-2.snap
---
source: tinc-integration-tests/src/optional_fields.rs
expression: message
---
{
  "inner": null,
  "items": [],
  "map_items": {
    "key1": {
      "name": "value1",
      "value": null
    },
    "key2": {
      "name": "value2",
      "value": 99
    }
  }
}
