tinc-integration-tests/src/snapshots/tinc_integration_tests__optional_fields__nested_optional_repeated-2.snap
---
source: tinc-integration-tests/src/optional_fields.rs
expression: message
---
{
  "inner": null,
  "items": [
    {
      "name": "first",
      "value": null
    },
    {
      "name": "second",
      "value": 10
    }
  ],
  "map_items": {}
}
