tinc-integration-tests/src/snapshots/tinc_integration_tests__optional_fields__nested_optional_with_inner-2.snap
---
source: tinc-integration-tests/src/optional_fields.rs
expression: message
---
{
  "inner": {
    "name": "test",
    "value": 42
  },
  "items": [],
  "map_items": {}
}
