tinc-integration-tests/src/snapshots/tinc_integration_tests__optional_fields__nested_optional_with_inner.snap
---
source: tinc-integration-tests/src/optional_fields.rs
expression: state
---
TrackerSharedState {
    fail_fast: false,
    errors: [
        TrackedError {
            kind: MissingField,
            fatal: true,
            path: "items",
        },
        TrackedError {
            kind: MissingField,
            fatal: true,
            path: "map_items",
        },
    ],
}
