tinc-integration-tests/src/snapshots/tinc_integration_tests__optional_fields__optional_primitives_all_some-2.snap
---
source: tinc-integration-tests/src/optional_fields.rs
expression: message
---
{
  "opt_string": "hello",
  "opt_int32": 42,
  "opt_int64": 100,
  "opt_uint32": 200,
  "opt_uint64": 300,
  "opt_float": 0.5,
  "opt_double": 1.5,
  "opt_bool": true,
  "opt_bytes": "aGVsbG8="
}
